--- a/style.css
+++ b/style.css
@@ -230,6 +230,11 @@ h1, h2, h3, h4, h5, h6 {
     color: #64ffda;
 }
 
+.skill-icon svg {
+    width: 100%;
+    height: 100%;
+}
+
 .skill-name {
     font-family: 'Poppins', sans-serif;
     font-weight: 500;
